--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -5,7 +5,7 @@
 <h1>Dashboard</h1>
 <p>What do you want to do?</p>
 <ul>
-    <li><a href="{% url dashboard:order-summary %}">Manage orders</a></li>
+    <li><a href="{% url dashboard:order-summary %}">See statistics</a></li>
     <li><a href="{% url dashboard:order-list %}">Manage orders</a></li>
 	<li><a href="{% url dashboard:reports-index %}">View reports</a></li>
 </ul>
