dashboard additions for userer management

--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -8,6 +8,8 @@
     <li><a href="{% url dashboard:order-summary %}">See statistics</a></li>
     <li><a href="{% url dashboard:order-list %}">Manage orders</a></li>
 	<li><a href="{% url dashboard:reports-index %}">View reports</a></li>
+    <li><a href="{% url dashboard:users-index %}">User management</a></li>
+    <li><a href="#">Issue reports</a></li>
 </ul>
 
 {% endblock %}
