--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -75,7 +75,8 @@
 
 <p>With selected users:</p>
 <ul>
-    <li><label><input type="radio" name="action" value="do_something" /> Do something</label></li>
+    <li><label><input type="radio" name="action" value="make_active" /> Make active</label></li>
+    <li><label><input type="radio" name="action" value="make_inactive" /> Make inactive</label></li>
 </ul>
 <input type="submit" value="Go!" />
 
