user search and minor template changes

--- a/oscar/templates/dashboard/orders/order_detail.html
+++ b/oscar/templates/dashboard/orders/order_detail.html
@@ -30,7 +30,7 @@ Order {{ order.number }}
 <table>
     <tr>
         <th>Username</th>
-        <td>{{ order.user.username }}</td>
+        <td><a href="{% url dashboard:user-detail order.user.id %}">{{ order.user.username }}</a></td>
     </tr>
     <tr>
         <th>Name</th>
