--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -1,14 +1,12 @@
-{% extends 'layout.html' %}
+{% extends 'dashboard/layout.html' %}
 
-{% block content %}
-
-<h1>Dashboard</h1>
+{% block dashboard_content %}
 <p>What do you want to do?</p>
 <ul>
     <li><a href="{% url dashboard:order-summary %}">See statistics</a></li>
     <li><a href="{% url dashboard:order-list %}">Manage orders</a></li>
 	<li><a href="{% url dashboard:reports-index %}">View reports</a></li>
     <li><a href="{% url dashboard:users-index %}">User management</a></li>
+    {% comment %}<li><a href="{% url dashboard:events-index %}">Events</a></li>{% endcomment %}
 </ul>
-
 {% endblock %}
