--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -5,11 +5,12 @@
 {% endblock header %}
 
 {% block content %}
+    <div>
         <a href="{% url dashboard:order-summary %}">See statistics</a> |
         <a href="{% url dashboard:order-list %}">Manage orders</a> |
         <a href="{% url dashboard:reports-index %}">View reports</a> |
         <a href="{% url dashboard:users-index %}">User management</a> |
         {% comment %}<a href="{% url dashboard:events-index %}">Events</a>{% endcomment %}
-
+    </div>
     {% block dashboard_content %}{% endblock dashboard_content %}
 {% endblock content %}
