Moved dashboard templatetags library into the main oscar app.

--- a/oscar/templates/dashboard/users/index.html
+++ b/oscar/templates/dashboard/users/index.html
@@ -1,5 +1,5 @@
 {% extends 'dashboard/layout.html' %}
-{% load user_orders %}
+{% load dashboard_tags %}
 
 {% block header %}
 <h2>User management</h2>
