Added first view of promotions dashboard app

--- a/sandbox/templates/layout.html
+++ b/sandbox/templates/layout.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% load currency_filters %}
-{% load promotions %}
+{% load promotion_tags %}
 {% load category_tags %}
 
 {% block layout %}
