First experiment with Twitter's bootstrap

--- a/sandbox/templates/base.html
+++ b/sandbox/templates/base.html
@@ -7,8 +7,15 @@
         <meta name="description" content="{% block description %}{% endblock %}" />
         <meta name="keywords" content="{% block keywords %}{% endblock %}" />
         <link rel="shortcut icon" href="{{ STATIC_URL }}favicon.ico" />
-        <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" />
+		<script type="text/javascript" src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
         {% block extra_head %}{% endblock %}
+		<style>
+		body {
+			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+		}
+		</style>
     </head>
     <body id="{% block body_id %}default{% endblock %}" class="{% block body_class %}default{% endblock %}">
         {% block layout %}{% endblock %}
