--- a/sandbox/templates/layout.html
+++ b/sandbox/templates/layout.html
@@ -5,64 +5,56 @@
 {% load category_tags %}
 
 {% block layout %}
-    <div id="container">
-        <div id="header">
-            <p><a href="{% url promotions:home %}">Oscar // Flexible e-commerce for Django</a></p>
-            
-            <form method="get" action="{% url search:search %}">
-                {{ search_form.as_p }}
-                <input type="submit" value="Go!" /> 
-            </form>
-            
+
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container-fluid">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="{% url promotions:home %}">Oscar // Domain-driven e-Commerce for Django</a>
+          <div class="nav-collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+            <p class="navbar-text pull-right">
+            <a href="{% url basket:summary %}">Basket</a>
+  			{{ basket.total_incl_tax|currency }} |
             {% if user.is_authenticated %}
                 <a href="{% url customer:summary %}">Profile</a>
                 <a href="{% url customer:logout %}">Logout</a>
             {% else %}
                 <a href="{% url customer:login %}">Login</a>
             {% endif %}
-            
-            Basket total: {{ basket.total_incl_tax|currency }}
-            <a href="{% url basket:summary %}">View basket</a>
-            
-			{% category_tree depth=2 as categories %}
+			</p>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>	
 
-			{% if categories %}
-			<ul>
-			{% for category in categories %}
-			<li><a href="{{ category.0.get_absolute_url }}">{{ category.0.name }}</a>
-				{% if category.1 %}
-				<ul>
-				{% for subcategory in category.1 %}
-				<li><a href="{{ subcategory.0.get_absolute_url }}">{{ subcategory.0.name }}</a>
-				{% endfor %}
-				</ul>
-				{% endif %}
-			</li>
-			{% endfor %}
-			</ul>
-			{% endif %}
-            
-            {% block header %}
-            {% endblock %}
-        </div>
-        <div id="content">
+    <div class="container">
+		<h1>Welcome</h1>
+	    <p>Hello</p>
+
         
-            {% if messages %}
-            <ul class="messages">
-                {% for message in messages %}
-                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-            
-            <div id="promotions">
-                {% for promotion in promotions_page %}
-                    {% render_promotion promotion %}
-                {% endfor %}
-            </div>
-            
-            {% block content %}{% endblock %}
-        </div>
-        <div id="footer">{% block footer %}{% endblock %}</div>
+		{% if messages %}
+		<ul class="messages">
+			{% for message in messages %}
+			<li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+			{% endfor %}
+		</ul>
+		{% endif %}
+		
+		<div id="promotions">
+			{% for promotion in promotions_page %}
+				{% render_promotion promotion %}
+			{% endfor %}
+		</div>
+		
+		{% block content %}{% endblock %}
     </div>
 {% endblock %}
