Added basic views for editing raw HTML promotions

--- a/oscar/templates/dashboard/index.html
+++ b/oscar/templates/dashboard/index.html
@@ -1,6 +1,7 @@
 {% extends 'dashboard/layout.html' %}
 
 {% block dashboard_content %}
+<h1>Dashboard</h1>
 <p>What do you want to do?</p>
 <ul>
     {% for item in menu_items %}
