--- a/oscar/templates/dashboard/promotions/create_rawhtml.html
+++ b/oscar/templates/dashboard/promotions/create_rawhtml.html
@@ -1,17 +1,19 @@
 {% extends 'dashboard/layout.html' %}
 
-{% block header %}
 <h2>Create new HTML content block</h2>
-{% endblock %}
 
 {% block dashboard_content %}
+<h1>Create new HTML content block</h1>
+
 <form action="." method="post">
 	{% csrf_token %}
 	<table>
 		{{ form.as_table }}
 		<tr>
 			<th></th>
-			<td><input type="submit" value="Save" /></td>
+			<td><button type="submit" class="btn btn-primary">Save</button>
+				or <a href="{% url dashboard:promotion-list %}">cancel</a>
+			</td>
 		</tr>
 	</table>
 </form>
