--- a/oscar/templates/dashboard/promotions/promotion_list.html
+++ b/oscar/templates/dashboard/promotions/promotion_list.html
@@ -7,6 +7,8 @@
 
 <h1>Content block management</h1>
 
+<p><a href="{% url dashboard:promotion-list-by-page %}" class="btn">View promotions by page</a></p>
+
 <h2>Content blocks</h2>
 {% if promotions %}
 
