--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -1,5 +1,10 @@
 {% extends 'layout.html' %}
 
+{% block extra_head %}
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}js/oscar-dashboard.js"></script>
+{% endblock %}
+
 {% block header %}
     <h2>Dashboard</h2>
 {% endblock header %}
