--- a/oscar/templates/dashboard/promotions/page_detail.html
+++ b/oscar/templates/dashboard/promotions/page_detail.html
@@ -8,12 +8,12 @@
 {% for position in positions %}
 <h2>Edit promotions in position '{{ position.name }}'</h2>
 {% if position.promotions %}
-<ul>
+<ul class="promotion_list">
     {% for promotion in position.promotions %}
     <li>
     {{ promotion.content_object.name }} - Type: {{ promotion.content_object.type }}
     <a href="{% url dashboard:promotion-update promotion.content_object.code promotion.content_object.id %}" class="btn btn-success">Edit</a>
-    <a href="#" class="btn btn-info">Re-order</a>
+    <a href="#" class="btn btn-info btn-handle">Re-order</a>
     <a href="{% url dashboard:pagepromotion-delete promotion.id %}" class="btn btn-danger">Remove</a>
     </li>
     {% endfor %}
@@ -25,3 +25,7 @@
 {% endfor %}
 
 {% endblock dashboard_content %}
+
+{% block onbodyload %}
+oscar.dashboard.promotions.init();
+{% endblock %}
