--- a/oscar/templates/dashboard/layout.html
+++ b/oscar/templates/dashboard/layout.html
@@ -2,7 +2,7 @@
 
 {% block extra_head %}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/oscar-dashboard.js"></script>
+<script type="text/javascript" src="{{ STATIC_URL }}oscar/js/dashboard.js"></script>
 {% endblock %}
 
 {% block header %}
